# GeomLib

./: CMakeLists.txt  Geom.cpp  Geom.h  buildmain.sh  main.cpp
Tests/: Tests.cpp
